# browser-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: AGENTS.md  Caddyfile.template  README.md  agent-browser-action-policy.json  ensure-self-improvement.sh  litellm.config.yaml  setup.sh  stekkies-dashboard.sudoers
deploy/systemd/: browser-host.service  dashboard.service  healthcheck.service  healthcheck.timer  litellm-proxy.service  orchestrator.service  poller.service  self-improvement-worker.service  self-improvement-worker.timer  vnc.service  xvfb.service
docs/: README.md  agent-browser-backend.md  architecture.md  development.md  engineering-roadmap.md  planned-features.md  poller-plan.md
docs/lessons/: 2026-06-29-reasoning-truncation-silent-stall.md  2026-07-01-aria-less-dialogs-snapshot-blindspot.md  2026-07-02-cross-source-dedup-gap.md  2026-07-02-dropdown-options-default-to-submit.md  2026-07-02-duplicate-html-ids-break-scoped-lookups.md  2026-07-02-eligibility-gates-readable-at-poll-time.md  2026-07-02-hof-van-oslo-resolution.md  2026-07-02-kaatstraat-one-listing-many-url-shapes.md  2026-07-02-stale-page-dumps-quadratic-tokens.md  2026-07-03-hung-mcp-teardown-watchdog.md  2026-07-04-alerting-shared-failure-mode.md  2026-07-05-no-credit-is-not-a-verdict.md  2026-07-07-asyncio-executor-dns-starvation.md  2026-07-10-self-improvement-control-plane-failures.md  README.md
documents/: README.md
scripts/: check_docs.py
src/: AGENTS.md  agent_browser_runtime.py  agent_tools.py  applicant_profile.py  apply.py  apply_hermes.py  apply_priority.py  apply_sessions.py  bedroom_policy.py  browser_agent.py  browser_backend_metrics.py  browser_dom_tools.py  browser_host.py  browser_lock.py  browser_token_metrics.py  capture_form.py  config.py  credentials.py  dedup.py  digest.py  eventlog.py  gmail_watch.py  healthcheck.py  import_passwords.py  incident_store.py  known_gates.py  listing_context.py  llm_pricing.py  login_setup.py  matches.py  message_template.py  models.py  notify.py  orchestrator.py  playwright_mcp_runtime.py  playwright_mcp_smoke.py  push_notify.py  reauth.py  recovery_agent.py  redaction.py  (+11 more)
src/browser_agent/: AGENTS.md  __init__.py  guards.py  loop.py  result.py  transport.py
src/dashboard/: AGENTS.md  app.py  cache.py  costs.py  data.py  funnel.py  healthinfo.py  si.py  trajectories.py
src/dashboard/static/: dashboard.css  dashboard.js  sw.js
src/dashboard/templates/: _attention.html  _health.html  _live_sessions.html  _macros.html  (+11 more)
src/poller/: __init__.py  browser_lock.py  dedup.py  discover.py  fetch.py  filters.py  judge.py  models.py  parsers.py  registry.py  sniff.py  watcher.py
src/prompts/: AGENTS.md  __init__.py  apply_prompt.py
src/self_improvement/: AGENTS.md  __init__.py  browser_tools.py  cost.py  prompts.py  util.py  worktree.py
tests/: AGENTS.md  conftest.py  test_agent_browser_live.py  test_apply_priority.py  test_apply_sessions.py  test_bedroom_policy.py  test_browser_agent_loop.py  test_browser_agent_outcomes.py  test_browser_agent_transport.py  test_browser_backend_metrics.py  test_browser_dom_tools.py  test_browser_token_metrics.py  test_dashboard_attention.py  test_dashboard_cache.py  test_dashboard_funnel.py  test_dashboard_live_sessions.py  test_dashboard_si.py  test_dashboard_tokens.py  test_dashboard_trajectories.py  test_dedup.py  test_digest.py  test_gmail_watch.py  test_incident_store.py  test_known_gates.py  test_listing_context.py  test_message_template.py  test_notify.py  test_orchestrator_dedup.py  test_poller_dedup.py  test_poller_filters.py  test_poller_parsers.py  test_poller_watcher.py  test_poller_zero_yield_recovery.py  test_push_notify.py  test_recovery_agent.py  test_rent_policy.py  test_self_improvement_agent.py  test_self_improvement_harness.py  test_self_improvement_reliability.py  test_session_keeper.py  (+3 more)
(+8 files in other folders)
