[project]
name = "stekkies-responder"
version = "0.1.0"
description = "Autonomous responder for Stekkies rental matches (Gmail -> Stekkies -> browser agent)."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60",
    "google-api-python-client>=2.198",
    "google-auth-httplib2>=0.4",
    "google-auth-oauthlib>=1.4",
    "openai>=1.50",
    "httpx>=0.27",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
