[project]
name = "stekkies-responder"
version = "0.1.0"
description = "Autonomous responder for Stekkies rental matches (Gmail -> Stekkies -> browser agent)."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60",
    "google-api-python-client>=2.198",
    "google-auth-httplib2>=0.4",
    "google-auth-oauthlib>=1.4",
    "openai>=1.50",
    "httpx>=0.27",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.2.110",
    "litellm[proxy]>=1.90.2",
    "pywebpush>=2.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff.lint]
# Pyflakes only: catches real bugs (unused/undefined names, redefinitions like
# the _run/_run shadowing that broke the self-improvement agent), not style.
select = ["F"]
# Ruff's default dummy-variable regex (matches any `_foo`) exempts *all*
# underscore-prefixed names -- including this codebase's `_private_helper`
# convention -- from F811/F841. That's exactly the class of name that hid the
# _run/_run collision, so narrow it to a bare `_` (the "don't care" throwaway).
dummy-variable-rgx = "^_$"
