[project]
name = "stekkies-responder"
version = "0.1.0"
description = "Autonomous responder for Stekkies rental matches (Gmail -> Stekkies -> browser agent)."
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.60",
    "google-api-python-client>=2.198",
    "google-auth-httplib2>=0.4",
    "google-auth-oauthlib>=1.4",
    "openai>=1.50",
    "httpx>=0.27",
    "mcp>=1.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "claude-agent-sdk>=0.2.110",
    "litellm[proxy]>=1.90.2",
    "pywebpush>=2.3.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15",
    "ty>=0.0.57",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
# Coverage ratchet: `just check` fails below this floor. Raise it when real
# coverage rises (60% on 10-07-2026; floor keeps ~2pt margin for environment
# variance); never lower it. Machine-authored patches (self-improvement
# agent) must not erode the tested fraction of the codebase.
fail_under = 58

[tool.ruff.lint]
# Bug-catching rule sets only, not style: Pyflakes (unused/undefined names,
# redefinitions like the _run/_run shadowing that broke the self-improvement
# agent), bugbear, pyupgrade, flake8-async (real value given the 07-07-2026
# executor-starvation incident), and simplify.
select = ["F", "B", "UP", "ASYNC", "SIM"]
ignore = [
    # Pure style; this codebase's bare `try/except: pass` fail-open idiom and
    # stacked `with` blocks are deliberate and clearer at their call sites.
    "SIM105",
    "SIM117",
]
# Ruff's default dummy-variable regex (matches any `_foo`) exempts *all*
# underscore-prefixed names -- including this codebase's `_private_helper`
# convention -- from F811/F841. That's exactly the class of name that hid the
# _run/_run collision, so narrow it to a bare `_` (the "don't care" throwaway).
dummy-variable-rgx = "^_$"
